--- a/Chalkable.Web/assets/jade/activities/calendar/BaseCalendar.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/BaseCalendar.jade
@@ -1,3 +1,8 @@
+mixin TooltipWithOverflow(text)
+    -attributes['data-tooltip'] = text
+    -attributes['data-tooltip-type'] = 'overflow'
+    p(attributes)=text
+
 mixin Calendar(data, bodyTpl, bodyModel, controller, actions, params)
     .chlk-calendar(attributes)
         .header
