--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekDayPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekDayPopUp.jade
@@ -24,7 +24,7 @@
                     li.items
                         +ActionLink('announcement', 'view', item.getId())(class="announcement-type-" + item.getChalkableAnnouncementType()).pop-up-announcement
                             div
-                                p.item-title #{item.getAnnouncementTypeName()} #{item.getOrder()}
+                                +TooltipWithOverflow(item.getTitle()).item-title
     if !self.getUserRole().isStudent()
         +ActionLink('announcement', 'addViaCalendar', self.getDate().format('mm-dd-yy'), true, self.getSelectedClassId() || '').ann-button.plus-ann
 
