--- a/Chalkable.Web/assets/jade/activities/apps/add-app-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/add-app-dialog.jade
@@ -1,4 +1,5 @@
 .dialog.add-app
+    .your-app-name
     +ActionForm('apps', 'create')
         input(type="text", name="name", class="validate[required]")
         +Button()(type="submit").special-button2.blue.add Add
