--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
@@ -26,7 +26,7 @@
                     li.items
                         +ActionLink('announcement', 'view', item.getId())(class="announcement-type-" + item.getChalkableAnnouncementType()).pop-up-announcement
                             div
-                                p.item-title #{item.getAnnouncementTypeName()} #{item.getOrder()}
+                                +TooltipWithOverflow(item.getTitle()).item-title
     if !self.getUserRole().isStudent()
         +ActionLink('announcement', 'add', clazz.getId(), chlk.models.announcement.AnnouncementTypeEnum.HW, date.format('mm/dd/yy'), true).ann-button.plus-ann
 
