updated Announcement View

--- a/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
@@ -17,7 +17,7 @@ div(class="selected " + itemCls, rowIndex=i, recId=self.getId()).i-b
                 class=self.getGradeInputClass()
                 data-grade-value=self.getGradeValue(),
                 data-id=self.getId().valueOf()
-            ).no-padding.grade-input.grade-autocomplete.grey-input
+            ).no-padding.grade-input.grade-autocomplete.grey-input.with-grid-focus.select-text
             .letters 0 - #{self.getMaxScore()}
             .grading-input-popup.chlk-pop-up-container.popup-bottom
                 .pop-up-triangle.big
