--- a/Chalkable.Web/assets/jade/activities/apps/MyAppsSearch.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/MyAppsSearch.jade
@@ -3,7 +3,7 @@ li(data-title = self.name, data-value = self.id.valueOf(), style="background: wh
 
         +ActionLink('apps', 'viewApp', self.url, self.myAppsUrl, chlk.models.apps.AppModes.MYAPPSVIEW).app-market-search-item
             .img-container
-                +Image(src=self.getPictureURL(self.smallPictureId, 74, 74, true)).app-icon
+                +Image(src=self.getAppPictureURL(self.smallPictureId, 74, 74)).app-icon
             .app-name
                 div=self.name
 
