--- a/Chalkable.Web/assets/jade/activities/apps/Apps.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/Apps.jade
@@ -25,7 +25,7 @@ mixin AppManagementControls(id, state, liveId)
             each item in self.items
                 +GridRow()
 
-                    pictureLink = item.getSmallPictureId() ? self.getPictureURL(item.getSmallPictureId(), 74, 74, true) : '#'
+                    pictureLink = item.getSmallPictureId() ? self.getAppPictureURL(item.getSmallPictureId(), 74, 74) : '#'
                     .td
                         img.app-icon(src=pictureLink)
                     .td= item.getName()
