fixed period range on day calendar page

--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayCalendarBody.jade
@@ -14,7 +14,7 @@
                         +ActionLink('calendar', 'showDayPopUp', item.getDate().format('mm-dd-yy'), i)(class = period && self.isMainCalendar() ? "" : "disabled").period-item.day
                             if(item.getDate().getDate().getDay() == 0)
                                 .period-info=(i+1)
-                                span.time #{calendarDayItem.getPeriod().getStartTime()} - #{calendarDayItem.getPeriod().getEndTime()}
+                                span.time=calendarDayItem.getPeriod().displayPeriodTimeRange()
                             else
                                 li
                                     if(period)
