fixed for Reports - General UI - After running a report (Worksheet or Gradebook), a mystery box will appear at the bottom of the browser.

--- a/Chalkable.Web/assets/sass/screen.scss
+++ b/Chalkable.Web/assets/sass/screen.scss
@@ -38,6 +38,10 @@ h1,h2,h3,h4,h5,h6,strong {
   color: #2f424b;
 }
 
+.report-iframe{
+  display: none;
+}
+
 @font-face {
     font-family: 'Jrhand';
     src: url('fonts/jrhand-webfont.eot');
