--- a/Chalkable.Web/assets/jade/activities/grading/WorksheetReport.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/WorksheetReport.jade
@@ -63,8 +63,8 @@
                     +LabeledCheckbox(Msg.Average, 'printAverage', false)
                     +LabeledCheckbox(Msg.Student_name, 'printStudent', false)
                 TD.item-3
-                    h3=Msg.Include
-                    +LabeledCheckbox(Msg.Working_filter, 'workingFilter', false)
+                    h3=Msg.Working_filter
+                    +LabeledCheckbox(Msg.Save_to_Working_filter, 'workingFilter', false)
                     +LabeledCheckbox(Msg.Append_to_existing, 'appendToExisting', false)
                     +LabeledCheckbox(Msg.Overwrite_existing, 'overwriteExisting', false)
                 TD.item-3
