--- a/Chalkable.Web/assets/jade/activities/grading/WorksheetReport.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/WorksheetReport.jade
@@ -6,7 +6,7 @@
     .report-buttons.panel-bg
         +ActionLink('grading', 'gradeBookReport', self.getGradingPeriodId(), self.getClassId(), self.getStartDate().toStandardFormat(), self.getEndDate().toStandardFormat()).report-button=Msg.Grade_Book_Report
         a(href="javascript:").report-button.pressed=Msg.Worksheet_Report
-    +ActionForm('grading', 'submitWorksheetReport')
+    +ActionForm('grading', 'submitWorksheetReport').report-form
         +Hidden('gradingPeriodId', self.getGradingPeriodId().valueOf())
         +Hidden('classId', self.getClassId().valueOf())
         TABLE.report-table
@@ -51,10 +51,10 @@
                 TD(colspan="3").item-1.blank-columns
                     h3=Msg.Blank_columns
                     +LabeledCheckbox('', 'title1', false)(withInput = true, placeholder = Msg.Insert_title)
-                    +LabeledCheckbox('', 'title2', false)(withInput = true, placeholder = Msg.Insert_title)
-                    +LabeledCheckbox('', 'title3', false)(withInput = true, placeholder = Msg.Insert_title)
                     +LabeledCheckbox('', 'title4', false)(withInput = true, placeholder = Msg.Insert_title)
+                    +LabeledCheckbox('', 'title2', false)(withInput = true, placeholder = Msg.Insert_title)
                     +LabeledCheckbox('', 'title5', false)(withInput = true, placeholder = Msg.Insert_title)
+                    +LabeledCheckbox('', 'title3', false)(withInput = true, placeholder = Msg.Insert_title)
             TR
                 TD.item-3
                     h3=Msg.Include
@@ -63,8 +63,8 @@
                     +LabeledCheckbox(Msg.Average, 'printAverage', false)
                     +LabeledCheckbox(Msg.Student_name, 'printStudent', false)
                 TD.item-3
-                    h3=Msg.Include
-                    +LabeledCheckbox(Msg.Working_filter, 'workingFilter', false)
+                    h3=Msg.Working_filter
+                    +LabeledCheckbox(Msg.Save_to_Working_filter, 'workingFilter', false)
                     +LabeledCheckbox(Msg.Append_to_existing, 'appendToExisting', false)
                     +LabeledCheckbox(Msg.Overwrite_existing, 'overwriteExisting', false)
                 TD.item-3
