--- a/Chalkable.Web/assets/jade/activities/messages/MessageList.jade
+++ b/Chalkable.Web/assets/jade/activities/messages/MessageList.jade
@@ -56,4 +56,4 @@
                                         |, &nbsp;
                                         small= item.getShortSubject()
                                     p= item.getShortBody()
-                                    .sent= item.getSent().toString('dd/m/yy hh:min:ss')
+                                    .sent= item.getSent().toUSADateTimeFormat()
