--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -12,7 +12,6 @@ mixin AnnouncementTooltip()
             .white.comment-triangle
 
 .announcement-view.not-transparent
-    isNotStudent = true
     isReadonly = !self.isAnnOwner()
     studentAnnouncements = false
     studentAnnouncementsInfo = self.getStudentAnnouncements()
@@ -44,8 +43,15 @@ mixin AnnouncementTooltip()
                         +ActionLink('announcement', 'makeVisible', self.getId()).make-visible-btn Make visible
                 br
                 .left-block
-                    +ActionLink('teachers', 'info', self.getOwner().getId())(data-tooltip=self.getOwner().getFullName()).image-container
-                        +PersonImg(self.getOwner(), 47)
+                    if self.getUserRole().isStudent()
+                        a(data-tooltip=self.getOwner().getFullName(),
+                        ).image-container
+                            +PersonImg(self.getOwner(), 47)
+                    else
+                        +ActionLink('teachers', 'info', self.getOwner().getId())(
+                            data-tooltip=self.getOwner().getFullName(),
+                        ).image-container
+                            +PersonImg(self.getOwner(), 47)
                 .right-block
                     h2(class=self.getExpiresDateColor())=self.getExpiresDateText()
                     p=self.getContent()
