--- a/Chalkable.Web/assets/sass/partials/main/apps/_market_pages.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/_market_pages.scss
@@ -8,7 +8,7 @@
 .app-market{
   .buttons-toolbar{
     .toolbar-btn.app-store{
-      margin-left: 230px;
+      margin-left: 199px !important;
     }
   }
 
