--- a/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-market-details.jade
@@ -3,7 +3,7 @@ devName = app.getDeveloperInfo().getName()
 webSiteLink = app.getDeveloperInfo().getWebSite()
 
 .app-market-details
-    +AppMarketToolbar(self.currentBalance, self.categories, self.gradeLevels)
+    +AppMarketToolbar(self.currentBalance, self.categories, self.gradeLevels, true)
     .app-screenshots-panel
         +Carousel()
             -videoUrl = app.getVideoDemoUrl() || ''
