fixed forgotPassword added reset password to Developer settings

--- a/Chalkable.Web/App_Code/ChlkHelpers.cshtml
+++ b/Chalkable.Web/App_Code/ChlkHelpers.cshtml
@@ -176,7 +176,7 @@
                    </ul>
                    <input type="submit" tabindex="3" style="visibility:hidden;"/>
                    </form>
-                   <form id="recover" action="@Url.Content("~/Account/ResetPassword")" method="post">
+                   <form id="recover" action="@Url.Content("~/User/ResetPassword")" method="post">
                    <ul id="form" class="signinformclass">
                       <h3 class="signintitle">Forgot Password</h3>
                       <li>
