--- a/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
@@ -91,7 +91,7 @@
 				<ul>
 					<li>
 						<ul class="links">
-							<li><a href="@Url.Content("~/Account/Faq")">FAQ</a></li>
+							<li><a href="@Url.Content("~/User/Faq")">FAQ</a></li>
 							<li><a target="_blank" href="http://blog.chalkable.com/">Blog</a></li>
 							<li><a target="_blank" href="http://chalkable.uservoice.com/">Feedback</a></li>
 							<li><a href="mailto:info@chalkable.com">Email us</a></li>
@@ -122,7 +122,7 @@
 					<li>
 						<ul>
 							<li><a href="http://cl.ly/361V222N3T213e1m1J0Z">Press</a></li>
-							<li><a href="@Url.Content("~/Account/Terms")">Terms</a></li>
+							<li><a href="@Url.Content("~/User/Terms")">Terms</a></li>
 						</ul>
 				</ul>
 			</div> <!-- /footerTop -->
@@ -170,7 +170,7 @@
 				<span class="close"></span>
 			</header>
 
-			<form id="reset-form" action="@Url.Content("~/Account/ResetPassword")" method="post">
+			<form id="reset-form" action="@Url.Content("~/User/ResetPassword")" method="post">
 				<p>
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email" class="validate[required,custom[email]]">
