--- a/Chalkable.Web/assets/jade/activities/settings/DeveloperSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/settings/DeveloperSettings.jade
@@ -5,10 +5,13 @@
                 +ActionLink('settings', 'dashboard').pressed General
             .right
                 +ActionLink('account', 'profile', self.developerId) Profile
-    .row
-        +ActionLinkButton('developer', 'paypalSettings').special-button.yellow-button PayPal
-    .row
-        id = self.currentAppId ? self.currentAppId.valueOf() : null
-        appName = self.getCurrentAppName() || ''
-        if id
-            +ActionLinkButton('apps', 'tryDeleteApplication', id, appName).special-button.yellow-button Delete application
+    .general
+        .block
+            .row
+                +ActionLinkButton('developer', 'paypalSettings').special-button.yellow-button PayPal
+            .row
+                id = self.currentAppId ? self.currentAppId.valueOf() : null
+                appName = self.getCurrentAppName() || ''
+                if id
+                    +ActionLinkButton('apps', 'tryDeleteApplication', id, appName).special-button.yellow-button Delete application
+        +ResetPasswordBlock()
