fixed for Discipline: In Chalkable, the infraction names that doesn't fit the field are being truncated.

--- a/Chalkable.Web/assets/jade/controls/labeled-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/labeled-checkbox.jade
@@ -5,6 +5,6 @@ mixin LabeledCheckbox(text, name, val, isReadOnly)
         if attributes.withInput
             input(placeholder=attributes.placeholder, name=name).label-input
         else
-            label(for=attributes.id)=text
+            label(for=attributes.id, data-tooltip=text, data-tooltip-type="overflow")=text
 
 
