--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -12,7 +12,7 @@ mixin AnnouncementTooltip()
             .white.comment-triangle
 
 .announcement-view.not-transparent
-    isReadonly = !self.isAnnOwner()
+    isReadonly = !self.isAbleToGrade()
     studentAnnouncements = false
     studentAnnouncementsInfo = self.getStudentAnnouncements()
     applications = self.getApplications()
