--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayCalendarBody.jade
@@ -23,4 +23,4 @@
                                             +ClassImg(clazz.getCourse(), 45, 80)
                                         .p-container
                                             p.title.day-title
-                                                span=clazz.getName()
+                                                span(data-tooltip=clazz.getFullClassName(), data-tooltip-type ="overflow")=clazz.getFullClassName()
