fixed for Teacher. Grades. Final Grades. Need to delete left/right buttons if student doesn't have any discipline

--- a/Chalkable.Web/assets/jade/activities/grading/FinalGradeStudentBlock.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/FinalGradeStudentBlock.jade
@@ -125,7 +125,7 @@ div(class=(selected ? "opened" : "")).attachments-container.z-10
                     +LeftRightToolbar(items)(
                         itemsCount = 1
                         needDots = false
-                    ).disciplines-toolbar.big-arrows
+                    )(class=self.getDisciplines().length ? "" : "empty").disciplines-toolbar.big-arrows
                         each block in items
                             .disciplines-items-block
                                 each discipline in block
