fixed Gradebook Grid (Grades) - A grade of 0 for a student is in a different font and style than other grades

--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummaryItem.jade
@@ -5,7 +5,7 @@ mixin TeacherClassGradingGridSummaryCell(info, maxScore, gradable)
         -normalValue= numericV.toFixed(2) + '(' + info.getGradeValue() + ')'
 
     div(
-        class= (parseInt(normalValue, 10) ? '' : 'letter ') + (info.isEmptyGrade() ? "empty-grade" : "") + (info.needStrikeThrough() ? ' dropped-value' : ''),
+        class= (!Number.isNaN(parseInt(normalValue, 10)) ? '' : 'letter ') + (info.isEmptyGrade() ? "empty-grade" : "") + (info.needStrikeThrough() ? ' dropped-value' : ''),
         data-id= info.getId(),
         data-announcementid= parseInt(info.getAnnouncementId().valueOf(), 10),
         data-studentid= info.getStudentId(),
