fixed for CHLK-2635 For > 6 item types, show dropdown selector

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementForm.jade
@@ -1,13 +1,27 @@
 mixin AnnouncementTypeToolBar(types, announcement, typeId)
-    each item in types
+    if types.length > 6
+        SPAN.type-text #{Msg.Type} :
+        +Select('typeid')(disabled = !!announcement.getState())#type-select
+            each item in types
+                +Option(item.getId(), item.getName(), typeId==item.getId())(
+                    data-typeid=item.getId(),
+                    data-typename=item.getName()
+                )
         BUTTON(
-        class = "validate-skip " + (typeId==item.getId() ? 'pressed' : ''),
-        data-typeid=item.getId(),
-        data-typename=item.getName(),
-        type = announcement.getState() ? "button" : "submit",
-        name="submitType",
-        value="save"
-        ).action-button.announcement-type-button= item.getDescription()
+            type = announcement.getState() ? "button" : "submit",
+            name="submitType",
+            value="save"
+        )#announcement-type-btn.validate-skip.x-hidden
+    else
+        each item in types
+            BUTTON(
+            class = "validate-skip " + (typeId==item.getId() ? 'pressed' : ''),
+            data-typeid=item.getId(),
+            data-typename=item.getName(),
+            type = announcement.getState() ? "button" : "submit",
+            name="submitType",
+            value="save"
+            ).action-button.announcement-type-button= item.getDescription()
 
 
 
