added Terms, Faq pages

--- a/Chalkable.Web/Views/Home/Index.cshtml
+++ b/Chalkable.Web/Views/Home/Index.cshtml
@@ -25,9 +25,9 @@
 
             mixpanel.track_pageview("/SignUp/Admin");
             mixpanel.track_pageview("/SignUp/AdminSisInfo");
-            mixpanel.track_pageview("/Account/Terms");
-            mixpanel.track_pageview("/Account/Developers");
-            mixpanel.track_pageview("/Account/FAQ");
+            mixpanel.track_pageview("/Home/Terms");
+            mixpanel.track_pageview("/User/Developers");
+            mixpanel.track_pageview("/Home/FAQ");
         });
     </script>   
 }
