--- a/Chalkable.Web/Views/Shared/Footer.cshtml
+++ b/Chalkable.Web/Views/Shared/Footer.cshtml
@@ -14,7 +14,7 @@
             <ul>
                <li><a href="#first-anchor" class="scroll">Feature tour</a></li>
                <li><a href="#pricing" class="scroll">Pricing &amp; Signup</a></li>
-               <li><a href="@Url.Content("~/User/Faq")">FAQ</a></li>
+               <li><a href="@Url.Content("~/Home/Faq")">FAQ</a></li>
                <li><a href="@Url.Content("~/Developer/Info")">Developers</a></li>
                <li><a href="http://blog.chalkable.com/" target="_blank">Blog</a></li>
                <li><a href="http://chalkable.uservoice.com/" target="_blank">Feedback</a></li>
