--- a/Chalkable.Web/assets/sass/screen-home.scss
+++ b/Chalkable.Web/assets/sass/screen-home.scss
@@ -9,7 +9,7 @@
 
 // fonts
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,700);
 
 // style 
 
@@ -40,9 +40,9 @@ input[type=submit][disabled] {
 
 header[role='banner'] {
   height: 70px;
-  background: $blue url('images/header_bg.jpg') repeat-x;
+  background: $blue image-url('header_bg.jpg') repeat-x;
   @include background-size(252px 70px);
-  @include retina('images/header_bg@2x.jpg');
+  @include retina('header_bg@2x.jpg');
   @include box-shadow(0 1px 2px rgba(black, .3));
   position: relative;
   z-index: 2;
@@ -52,11 +52,11 @@ header[role='banner'] {
       display: inline-block;
       width: 180px;
       height: 30px;
-      background: url('images/logo.png') no-repeat;
+      background: image-url('logo.png') no-repeat;
       text-indent: 120%;
       overflow: hidden;
       white-space: nowrap;
-      @include retina('images/logo@2x.png');
+      @include retina('logo@2x.png');
       @include background-size(180px 30px);
       margin-top: 14px;
       @include MQ(XS) {
@@ -145,9 +145,9 @@ header[role='banner'] {
     right: 0;
     width: 50px;
     height: 40px;
-    background: url('images/list.png') no-repeat center center;
+    background: image-url('list.png') no-repeat center center;
     @include background-size(30px 19px);
-    @include retina('images/list@2x.png');
+    @include retina('list@2x.png');
     background-color: $blue;
     top: 50%;
     @include translateY(-50%);
@@ -167,7 +167,7 @@ header[role='banner'] {
 
 #tagline {
   height: 600px;
-  background: url('images/bg_img_xl.jpg') no-repeat center center;
+  background: image-url('bg_img_xl.jpg') no-repeat center center;
   background-size: cover;
   .taglineMessage {
     text-align: center;
@@ -208,6 +208,12 @@ header[role='banner'] {
           @include background(linear-gradient(top, lighten(#4bdb7a, 10%), #37c967));
         }
       }
+
+      &.developers{
+        margin-right: 20px;
+      }
+
+
     }
     .signup {
       margin: 1em auto 0;
@@ -224,7 +230,7 @@ header[role='banner'] {
   }
 
   @include MQ(L) {
-    background-image: url('images/bg_img_l.jpg');
+    background-image: image-url('bg_img_l.jpg');
     height: 400px;
     .taglineMessage {
       h1 {
@@ -249,7 +255,7 @@ header[role='banner'] {
   }
 
   @include MQ(XS) {
-    background-image: url('images/bg_img_xs.jpg');
+    background-image: image-url('bg_img_xs.jpg');
     .taglineMessage {
       p {
         width: 100%;
@@ -275,12 +281,17 @@ header[role='banner'] {
         height: auto;
 
         &.move-left {
-            @include animation(move-left .8s);
+          @include animation(move-left .8s);
         }
       }
 
     }
     .description {
+
+      &.terms{
+        width: 100% !important;
+      }
+
       position: absolute;
       left: 0;
       top: 50%;
@@ -336,6 +347,24 @@ header[role='banner'] {
         padding-left: 4.6%;
       }
     }
+
+    &.terms {
+      background: #fff;
+      figure {
+        left: 0;
+        right: auto;
+
+        .move-right {
+          @include animation(move-right .8s);
+        }
+      }
+      .description {
+        left: auto;
+        right: 0;
+        padding-right: 0;
+      }
+    }
+
     @include MQ(L) {
       .description {
         h1 {
@@ -437,7 +466,7 @@ footer {
   }
 }
 
-#login {
+#login, #dev-signup-form {
   display: none;
 
   position: absolute;
@@ -472,12 +501,12 @@ footer {
         width: 25px;
         height: 25px;
         display: inline-block;
-        background: url('images/x.png') no-repeat;
+        background: image-url('x.png') no-repeat;
         position: absolute;
         right: 10px;
         top: 14px;
         cursor: pointer;
-        @include retina('images/x@2x.png');
+        @include retina('x@2x.png');
         @include background-size(25px 25px);
       }
     }
@@ -495,7 +524,7 @@ footer {
       input {
         width: 100%;
         border: 1px solid #c8c7c3;
-        padding: .6em .4em;
+        padding: .6em 1em;
         border-radius: 4px;
         font-size: 1em;
         @include box-shadow(inset 0 1px 3px rgba(black, .1));
@@ -519,6 +548,15 @@ footer {
       }
       p.forgotPassword {
         font-size: .8125em;
+      }
+      p.stay-logged-in {
+        input {
+          width: auto;
+        }
+
+        label {
+          display: inline-block;
+        }
       }
     }
     footer {
@@ -546,88 +584,22 @@ footer {
 
 // animations
 
-@-moz-keyframes move-right {
+@include keyframes(move-right) {
   0% {
-    -moz-transform: translateX(-100%);
-    transform: translateX(-100%); }
+    @include translateX(-100%);
+  }
 
   100% {
-    -moz-transform: translateX(0);
-    transform: translateX(0); } }
+    @include translateX(0);
+  }
+}
 
-@-webkit-keyframes move-right {
+@include keyframes(move-left) {
   0% {
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%); }
+    @include translateX(100%);
+  }
 
   100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); } }
-
-@-o-keyframes move-right {
-  0% {
-    -o-transform: translateX(-100%);
-    transform: translateX(-100%); }
-
-  100% {
-    -o-transform: translateX(0);
-    transform: translateX(0); } }
-
-@-ms-keyframes move-right {
-  0% {
-    -ms-transform: translateX(-100%);
-    transform: translateX(-100%); }
-
-  100% {
-    -ms-transform: translateX(0);
-    transform: translateX(0); } }
-
-@keyframes move-right {
-  0% {
-    transform: translateX(-100%); }
-
-  100% {
-    transform: translateX(0); } }
-
-@-moz-keyframes move-left {
-  0% {
-    -moz-transform: translateX(100%);
-    transform: translateX(100%); }
-
-  100% {
-    -moz-transform: translateX(0);
-    transform: translateX(0); } }
-
-@-webkit-keyframes move-left {
-  0% {
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%); }
-
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); } }
-
-@-o-keyframes move-left {
-  0% {
-    -o-transform: translateX(100%);
-    transform: translateX(100%); }
-
-  100% {
-    -o-transform: translateX(0);
-    transform: translateX(0); } }
-
-@-ms-keyframes move-left {
-  0% {
-    -ms-transform: translateX(100%);
-    transform: translateX(100%); }
-
-  100% {
-    -ms-transform: translateX(0);
-    transform: translateX(0); } }
-
-@keyframes move-left {
-  0% {
-    transform: translateX(100%); }
-
-  100% {
-    transform: translateX(0); } }
+    @include translateX(0);
+  }
+}
