--- a/Chalkable.Web/Views/Developer/Info.cshtml
+++ b/Chalkable.Web/Views/Developer/Info.cshtml
@@ -1,172 +1,229 @@
-﻿@{
-    ViewBag.Title = "Developers";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-@section Styles {
-    <link href="@Url.StaticContent("/Content/screen-index.css")" rel="stylesheet" type="text/css" />
-}
-
-@section ContentSection {
-@ChlkHelpers.RenderSignInForm(Url, Html)
-
-
-		<div id="docs_top_wrapper" class="faq_sticky_navigation developers" >
-			<div id="sticky_navigation" class="developers">
-				<div class="demo_container">
-                    <ul id="nav1">
-                        <li><a href="@Url.Content("~/#start")"><img src="@Url.StaticContent("/Content/images/common/nav-logo-150.png")" class="navlogo_faq developers"></a></li>
-				        <li><a href="#">
-				        <h5 class="dev_nav_logo">Developers</h5>
-				        </a></li>
-				        <li class="loginnav dev one"><a id="open" class="open" href="#" style="margin-left: 596px; width:200px">Sign in</a></li>
-                    </ul>
-				</div>
+﻿@using System.Configuration
+<!doctype html>
+<html lang="en" class="no-js">
+<head>
+	<meta charset="UTF-8">
+	<title>Developer</title>
+	<meta name="description" content="Web Apps for your school">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="@Url.StaticContent("/Content/screen.css")" rel="stylesheet" media="screen, projection" type="text/css" />
+	<link href="@Url.StaticContent("/Content/screen-home.css")" rel="stylesheet" media="screen, projection" type="text/css" />
+    <link href="@Url.StaticContent("/app/jquery/validation/css/template.css")" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/modernizr-ck.js")"></script>
+    <style>
+        .formErrorContent {
+            width: 150px;
+        }
+    </style>
+</head>
+<body>
+	<header role="banner">
+		<div class="wrap">
+			<div class="logo">
+				<h1><a href="@Url.Content("~/")">Chalkable</a></h1>
 			</div>
-	    </div>          
+			<nav>
+				<ul class="mainNav">
+					<li><a href="#" class='lg'>Login</a></li>
+				</ul>
+			</nav>
+			<a href="#" class="listMenu"></a> <!-- clicked -->
+		</div>
+	</header>
 
-
-<div class="wrapper">
-	<section class="splash dev">
-        <div id="vidyard_container">
-            <div class="vidyard_wrapper">
-                <a href="http://youtu.be/T1ccDPTC-PA?rel=0;autoplay=1" rel="media-gallery" class="fancybox-media">
-                    <div class = "vidyard_play_button"></div>
-                    <img alt="Chalkable" src="@Url.StaticContent("/Content/images/index/flask-vid.png")" width="503" />
-                </a>
-                
-            </div>
-        </div>
-
-	<div class="titletext devs">
-		<h1 class="dev">iFrame + API</h1>
-        <h3 class="syncs dev">API FOR SCHOOL DATA. </h3>
-		<h3 class="syncs dev">APP STORE FOR DISTRIBUTION.</h3>
-		<h3 class="syncs dev">BUILT IN
-            <span class="cycle dev" style="display:none">
-                <span class="sis_name" style="position:absolute; width: 200px;"><i class="underlines dev">GRADEBOOK</i>.</span>
-                <span class="sis_name" style="position:absolute; width: 200px;"><i class="underlines dev">CALENDAR</i>.</span>
-                <span class="sis_name" style="position:absolute; width: 200px;"><i class="underlines dev">MESSAGING</i>.</span>
-                <span class="sis_name" style="position:absolute; width: 200px;"><i class="underlines dev">ATTENDANCE</i>.</span>
-                <span class="sis_name" style="position:absolute; width: 200px;"><i class="underlines dev">DISCIPLINE</i>.</span>
-                <span class="sis_name" style="position:absolute; width: 200px;"><i class="underlines dev">FEED</i>.</span>
-                <span class="sis_name" style="position:absolute; width: 200px;"><i class="underlines dev">STUDENT</i>.</span>
-                <span class="sis_name" style="position:absolute; width: 300px;"><i class="underlines dev">STUDENT PROFILES</i>.</span>
-            </span>
-
-        </h3>
-		
-		<h3 class="syncs dev low">70/30 SPLIT. YOU KEEP 70.</h3>
-		
-			<div id="floatingbuttons" class ="dev">
-				<a href="@Url.Content("~/Developer/DeveloperDocs")" class="docs-button" ></a>
-				<a href="@Url.Content("~/Developer/Signup")" class="signup-button" ></a>
-			</div>
-	</div>
-	</section>
-<!--End Splash-->
-
-
-<section id="developers">
-	<div id="main_body_container">
-		<div class="wrapper developers">
-			<div id="body_container" style="margin-top:-254px;">
-				
-				<div class="dev_vids_wrapper">
-					<div class="vid_1">
-						<a href="http://www.youtube.com/embed/F7idVdfvU7A?rel=0;autoplay=1" rel="media-gallery" class="fancybox-media" id="embedded_assingment_vid"></a>
-						<p class="vid_title">
-							 Standard integration
-						</p>
-					</div>
-					<div class="vid_2">
-						<a href="http://www.youtube.com/embed/-oYYkjYMZzk?rel=0;autoplay=1" rel="media-gallery" class="fancybox-media" id="embedded_assingment_vid"></a>
-						<p class="vid_title">
-							 Advanced integration
-						</p>
-					</div>
-					<div class="vid_3">
-						<a href="http://youtu.be/4j4ib81IxGc?rel=0;autoplay=1" rel="media-gallery" class="fancybox-media my_apps_vid"></a>
-						<p class="vid_title">
-							 Authentication
-						</p>
-					</div>
-				</div>
-
-		                <div class="wrapper">
-			                <div id="body_container">
-				                <div class="details_box">
-					                <div class="contents">
-						                <div class="details dev">
-							                <h3 class="dev-head">iFrame</h3>
-							                <p>
-								                iFrame canvases display your web app in Chalkable. Our RESTful API provides access to powerful school data points such as student and teacher scheduling, real time attendance, announcements, grading records, discipline records and more. We encourage you, the developer, to push the limits of what can be done with big data and today's web technologies. 
-							                </p>
-							                <p>
-								               Use the API to authenticate the user...
-							                </p>
-                                            <img class="down-arrow-dev" src="@Url.StaticContent("/Content/images/index/down-arrow-dev.png")" />
-						                </div>
-					                </div>
-					                <img src="@Url.StaticContent("/Content/images/index/gbooks-iframe.png")" alt="app store" class="khan-dev-img" />
-				                </div>
-				                <div class="details_box" id="lowerdetail">
-					                <div class="image_box">
-						                <img src="@Url.StaticContent("/Content/images/index/api-explorer-prev.png")" alt="platform"/ class="api-explorer-dev">
-					                </div>
-					                <div class="contents" style="margin-top: -68px !important;">
-						                <div class="details dev">
-							                <h3 class="dev-head">API</h3>
-							                <p>
-                                                With the API your app can authenticate users, identify user roles (student/teacher/admin), read announcements, gather scheduling data, push grades to the Chalkable gradebook, and so much more.
-                                                <br />
-                                                View our <a href="@Url.Content("~/Developer/DeveloperDocs")">documentation page</a> to learn more about the Chalkable experience: how our app store works, how teachers and students will use your app within the context of Chalkable, and how our platform uses basic Javascript callback functions for integration.
-							                </p>
-							                <p>
-								                <a href="@Url.Content("~/Developer/Signup")">Sign up</a> to immediately receive an API key and make your first calls with the live API Explorer.
-							                </p>
-						                </div>
-					                </div>
-				                </div>
-			                </div>
-		                </div>
-
-                        <div class="price_bott_section dev" style="margin-bottom: 29px !important;">
-				            <h3 class="dev-ready">ARE YOU READY?</h3>
-				            <ul class="btn_grp">
-					            <div id="lowerbuttons" class="index">
-                                    <a href="@Url.Content("~/Developer/DeveloperDocs")" class="docs-button"></a>
-					                <a href="@Url.Content("~/Developer/Signup")" class="signup-button"></a>
-					            </div>
-				            </ul>
-			            </div>
+	<section id="tagline">
+		<div class="wrap">
+			<div class="taglineMessage">
+                <h1>API FOR SCHOOL DATA. <br>
+                    APP STORE FOR DISTRIBUTION.</h1>
+                <p>70/30 split. You keep 70.</p>
+                <a id="dev-signup-button" href="@Url.Content("~/")" class="btnBig developers">Sign Up</a>
+                <a id="view-docs" href="@Url.Content("~/Developer/DeveloperDocs")" class="btnBig">View Docs</a>
+                <p class="signup"><a href="https://www.youtube.com/watch?v=T1ccDPTC-PA">Check out a quick video introduction about submitting and testing apps in Chalkable.</a></p>
 			</div>
 		</div>
+	</section>
+
+	<section id="features">
+			<div id="appStore" class="feature feature1">
+				<div class="wrap">
+					<figure>
+						<img src="@Url.StaticContent("/Content/images/illustration-1.png")" alt="App store image">
+					</figure>
+					<div class="description">
+						<h1>iFrame</h1>
+						<p>Frame canvases display your web app in Chalkable. Our RESTful API provides access to powerful school data points such as student and teacher scheduling, real time attendance, announcements, grading records, discipline records and more. We encourage you, the developer, to push the limits of what can be done with big data and today's web technologies.</p>
+                        <p>Use the API to authenticate the user...</p>
+                    </div>
+				</div>
+			</div>
+
+			<div class="feature feature2">
+				<div class="wrap">
+					<figure>
+						<img src="@Url.StaticContent("/Content/images/illustration-2.png")" alt="Platform image">
+					</figure>
+					<div class="description">
+						<h1>API</h1>
+                        <p>With the API your app can authenticate users, identify user roles (student/teacher/admin), read announcements, gather scheduling data, push grades to the Chalkable gradebook, and so much more.
+                            View our documentation page to learn more about the Chalkable experience: how our app store works, how teachers and students will use your app within the context of Chalkable, and how our platform uses basic Javascript callback functions for integration. Sign up to immediately receive an API key and make your first calls with the live API Explorer.</p>
+                    </div>
+				</div>
+			</div>
+	</section>
+
+	<footer>
+		<div class="wrap">
+			<div class="footerTop">
+				<ul>
+					<li>
+						<ul class="links">
+							<li><a href="@Url.Content("~/User/Faq")">FAQ</a></li>
+							<li><a target="_blank" href="http://blog.chalkable.com/">Blog</a></li>
+							<li><a target="_blank" href="http://chalkable.uservoice.com/">Feedback</a></li>
+							<li><a href="mailto:info@chalkable.com">Email us</a></li>
+							<li><a href="mailto:jobs@chalkable.com">Jobs</a></li>
+						</ul>
+
+					<li>
+						<ul class="address">
+							<li>Chalkable</li>
+							<li>500 7th Ave.</li>
+							<li>17th Floor</li>
+							<li>New York, NY 10018</li>
+						</ul>
+
+					<li>
+						<ul class="socials">
+							<li>
+								<a target="_blank" href="https://twitter.com/chalkable">Follow us</a>
+							</li>
+
+							<li>
+								<a target="_blank" href="https://www.facebook.com/chalkable">Like us</a>
+							</li>
+
+							<li>(800) 844-0884</li>
+						</ul>
+
+					<li>
+						<ul>
+							<li><a href="http://cl.ly/361V222N3T213e1m1J0Z">Press</a></li>
+							<li><a href="@Url.Content("~/User/Terms")">Terms</a></li>
+						</ul>
+				</ul>
+			</div> <!-- /footerTop -->
+
+			<div class="footerBottom">
+				<p>&copy; 2014 STI</p>
+			</div>
+		</div>
+	</footer>
+
+	<div id="login">
+		<div id="makeLogin" class="loginContainer">
+			<header>
+				<h1>Login</h1>
+				<span class="close"></span>
+			</header>
+
+			<form id="login-form" action="@Url.Content("~/User/LogOn")" method="post">
+				<p>
+					<label for="email">Email</label>
+					<input type="email" name="UserName" id="email" class="validate[required,custom[email]]">
+				</p>
+
+				<p>
+					<label for="password">Password</label>
+					<input type="password" name="Password" id="password" class="pw field-password validate[required]">
+                    <input type="hidden" name="remember" value="false">
+				</p>
+
+				<p>
+					<input type="submit" value="LOGIN">
+				</p>
+				<p class="forgotPassword">
+					<a href="#">Forgot your password?</a>
+				</p>
+			</form>
+			<footer>
+				<p>iNow user? You'll have to log into iNow to set up your Chalkable account. Sign into iNow and click the Chalkable link on the top right corner.</p>
+			</footer>
+		</div>
+
+		<div id="resetPassword" class="loginContainer hide">
+			<header>
+				<h1>Reset password</h1>
+				<span class="close"></span>
+			</header>
+
+			<form id="reset-form" action="@Url.Content("~/User/ResetPassword")" method="post">
+				<p>
+					<label for="email">Email</label>
+					<input type="email" name="email" id="email" class="validate[required,custom[email]]">
+				</p>
+
+				<p>
+					<input type="submit" value="SUBMIT">
+				</p>
+				<p class="forgotPassword">
+					<a href="#">Back to login</a>
+				</p>
+			</form>
+			<footer>
+				<p>Check out your email. We just sent you an email with a link to reset your password.</p>
+			</footer>
+		</div>
 	</div>
-</section>
 
-</div> <!--wrapper-->
-   
-}
+<div id="dev-signup-form">
+    <div id="dev-signup-makeLogin" class="loginContainer">
+        <header>
+            <h1>Signup</h1>
+            <span class="close"></span>
+        </header>
 
-@Html.Partial("Footer")
+        <form action="@Url.Content("~/Developer/Signup")" id="sign-up-form" method="post">
+            <p>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email2" class="validate[required,custom[email]]">
+            </p>
 
-@section BottomScripts {
+            <p>
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password2" class="validate[required]">
+            </p>
 
-    <script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/all_not_minified.js")"></script>
-    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.waypoints.min.js")"></script>
-    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.cycle.js")"></script>
-    <script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery.fancybox.js")"></script>
+            <p>
+                <label for="password">Password Again</label>
+                <input type="password" name="confirm-password" id="confirm-password2" class="validate[required, equals[password2]]">
+            </p>
+
+            <p>
+                <input type="submit" value="SIGNUP">
+            </p>
+
+        </form>
+
+    </div>
+</div>
+<script type="text/javascript">
+    var _ = window.location.href.toString().match(/http?s:\/\/[^\/]+/);
+    var WEB_SITE_ROOT = _ + '@Url.Content("~/")';
+</script>
+<script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery-2.0.2.min.js")"></script>
+<script type="text/javascript" src="@Url.StaticContent("/app/jquery/jquery-ui.min.js")"></script>
+<script type="text/javascript" src="@Url.StaticContent("/app/jquery/validation/jquery.validationEngine.js")"></script>
+<script type="text/javascript" src="@Url.StaticContent("/app/jquery/validation/languages/jquery.validationEngine-en.js")"></script>
+<script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/retina-1.1.0.min.js")"></script>
+<script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/main.js")"></script>
+<script type="text/javascript" src="@Url.StaticContent("/app/chlk/index/sign_in_forms.js")"></script>
+</body>
+</html>
 
 
-    <script type="text/javascript">
 
-        $(window).load(function () {
-            $('.sign_in_button').click(function () {
-                var form = $('form#login');
-                form.submit();
-                return false;
-            });
-        });
-    </script>
-}
+
+
+
+
