--- a/Chalkable.Web/Views/Developer/SignUp.cshtml
+++ b/Chalkable.Web/Views/Developer/SignUp.cshtml
@@ -73,7 +73,7 @@
                 <h3>Fine Print.</h3>
                 <ul>
                   <li><a href="https://cl.ly/361V222N3T213e1m1J0Z">Press</a></li>
-                  <li><a href="@Url.Content("~/User/Terms#developer")">Terms</a></li>
+                  <li><a href="@Url.Content("~/Home/Terms#developer")">Terms</a></li>
                 </ul>
               </div>
               <div><span class="email_us"><a href="mailto:info@chalkable.com"><img src="@Url.StaticContent("/Content/images/index/email_us_img.png")" alt=""/></a></span></div>
@@ -107,7 +107,7 @@
                     </li>
                     <li>
                         <p class="instruct terms">
-                            By clicking this button you agree to the <a href="@Url.Content("~/User/Terms")">Terms.</a>
+                            By clicking this button you agree to the <a href="@Url.Content("~/Home/Terms")">Terms.</a>
                         </p>
                     </li>
                     <li class="button_container dev">
