Backed out changeset: a3e7718cb3f7

--- a/Chalkable.Web/Views/Developer/Info.cshtml
+++ b/Chalkable.Web/Views/Developer/Info.cshtml
@@ -109,7 +109,7 @@
 					<li>
 						<ul>
 							<li><a href="http://cl.ly/361V222N3T213e1m1J0Z">Press</a></li>
-							<li><a href="@Url.Content("~/Home/Terms")">Terms</a></li>
+							<li><a href="@Url.Content("~/User/Terms")">Terms</a></li>
 						</ul>
 				</ul>
 			</div> <!-- /footerTop -->
